# xmpp-providers-website

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  REUSE.toml  pyproject.toml
.github/workflows/: build-website.yml  reuse.yml
.reuse/: dep5
config/_default/: config.json  config.toml  menus.json  menus.toml
content/: about.md  add-provider.md  add_provider.md  apps.md  contact.md  faq.md  integration.md  overview.md  provider-file-generator.md  statistics.md
content/blog/: 2022-04-25-start-of-xmpp-providers-website.md  2022-08-17-xmpp-providers-and-blabber-im.md  2023-11-21-xmpp-providers-automation.md  2023-11-22-xmpp-providers-automation.md  2023-11-23-xmpp-providers-automation.md  2023-12-29-xmpp-providers-fully-automated.md  2024-03-11-xmpp-providers-chat.md  2024-03-28-xmpp-providers-server.md  2024-03-28-xmpp-providers-support-chat-server.md  2024-08-01_67_percent_providers_support_APIv2.md  2025-07-20-more_adaption_xmpp_providers.md  2025-07-20-rising-tide-lifts-all-boats.md  2025-07-20_rising_tide_lifts_all_boats.md  2025-10-08-more_adaption_xmpp_providers.md  2025-10-11-more-adoption-xmpp-providers.md  2025-10-11-more_adaption_xmpp_providers.md  2025-10-11-more_adoption_xmpp_providers.md  2026-01-18-eu-providers.md  2026-01-18_eu_providers.md  _index.md
data/: api_version.json  country_codes.json  recommended_clients.json
deploy/: xmpp-providers.conf
src/: common.py  prepare.py  run.py  statistics.py
static/images/: blabber-im-registration.png.license  category-A-eu-server.png.license  liberapay-donate.svg.license  survey_result_listing_experience.png.license  survey_result_overall.png.license  xmpp-providers-1200px-wide.png.license  xmpp-providers-support-chat-qr-code.license
static/logo/: gajim.png.license  kaidan.png.license
static/logos/: blabber.im.png.license  uwpx.png.license
themes/xmpp-providers/: LICENSE  theme.json  theme.toml
themes/xmpp-providers/archetypes/: default.md
themes/xmpp-providers/assets/css/: bootstrap.min.css  datatables.min.css  leaflet.css  style.css
themes/xmpp-providers/assets/fontawesome/css/: all.min.css
themes/xmpp-providers/i18n/: en.yaml
themes/xmpp-providers/layouts/: 404.html  index.html  index.xml
themes/xmpp-providers/layouts/_default/: baseof.html  matrix.html  rss.xml  single.html
themes/xmpp-providers/layouts/_default/_markup/: render-link.html
themes/xmpp-providers/layouts/blog/: list.html  single.html
themes/xmpp-providers/layouts/partials/: footer.html  head.html  nav.html  post-meta.html  provider-list-items.html
themes/xmpp-providers/layouts/provider/: single.html
themes/xmpp-providers/layouts/shortcodes/: apps-integration-archived.html  apps-integration.html  category-heading.html  contact.html  external-link.html  feed.html  figure.html  provider-details.html  provider-file-generator.html  provider-table.html  spacer.html  statistics.html  table.html  toc.html
themes/xmpp-providers/static/: browserconfig.xml  site.webmanifest  site.webmanifest.license
themes/xmpp-providers/static/js/: bootstrap-theme-switcher.js  bootstrap.bundle.min.js  bootstrap.min.js  datatables.min.js  echarts.min.js  language-codes.js  language-country-codes.js  leaflet.js  overview-table.js  provider-file-generator.js  scripts.js  sorttable.js  statistics.js  world.geojson.js  world.geojson.min.js
tools/: __init__.py  common.py  prepare.py  requirements.txt  run.py  statistics.py
