# SPDX-FileCopyrightText: 2023 Daniel Brötzmann <daniel.broetzmann@posteo.de>
#
# SPDX-License-Identifier: CC0-1.0

[project]
name = "xmpp-providers-website"
version = "1.0.0"

dependencies = [
  "defusedxml",
  "requests"
]

[project.optional-dependencies]

[dependency-groups]
dev = [
  "isort==6.0.1",
  "ruff==0.11.7",
  "pyright==1.1.400",
]

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
group_by_package = true
known_typing = ["typing"]
sections = [
  "FUTURE",
  "TYPING",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]
skip_gitignore = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812", # missing-trailing-comma
  "D100",   # undocumented-public-module
  "D104",   # undocumented-public-package
  "D203",   # one-blank-line-before-class
  "D205",   # blank-line-after-summary
  "D212",   # multi-line-summary-first-line
  "D213",   # multi-line-summary-second-line
  "D400",   # ends-in-period
  "D401",   # non-imperative-mood
  "D404",   # docstring-starts-with-this
  "D415",   # ends-in-punctuation
  "I001",   # unsorted-imports
  "PTH123", # builtin-open
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"
multiline-quotes = "double"
