# SPDX-FileCopyrightText: 2023 Daniel Brötzmann <daniel.broetzmann@posteo.de>
#
# SPDX-License-Identifier: CC0-1.0

[project]
name = "xmpp-providers-website"
version = "1.0.0"

dependencies = [
  "defusedxml",
  "Pillow",
  "python-slugify",
  "requests",
]

[project.optional-dependencies]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "pyright==1.1.403",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "A005",   # stdlib-module-shadowing
  "COM812", # missing-trailing-comma
  "D100",   # undocumented-public-module
  "D104",   # undocumented-public-package
  "D203",   # one-blank-line-before-class
  "D205",   # blank-line-after-summary
  "D212",   # multi-line-summary-first-line
  "D213",   # multi-line-summary-second-line
  "D400",   # ends-in-period
  "D401",   # non-imperative-mood
  "D404",   # docstring-starts-with-this
  "D415",   # ends-in-punctuation
  "PTH123", # builtin-open
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"
multiline-quotes = "double"


[tool.ruff.lint.isort]
case-sensitive = false
order-by-type = false
force-single-line = true
section-order = [
  "future",
  "typing",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder"
]

[tool.ruff.lint.isort.sections]
typing = ["_typeshed", "typing", "typing_extensions"]
